package metaserverpb;

option go_package = ".;serverpb";


service AskPut {
    rpc AskPut (AskPutRequest) returns (AskPutResponse) {}
}

message AskPutRequest {
    required string name = 1;
    required string object = 2;
    required string objectHash = 3;
}

message AskPutResponse {
    required int32 status = 3;
    required string destAddr = 4;
    required string destDir = 5;
    optional string msg = 6;
}
